<resources>
    <string name="app_name">My Movies</string>

    <string name="title"> Movie Title: </string>
    <string name="genre"> Movie Genre: </string>
    <string name="year"> Year: </string>
    <string name="rating"> Rating: </string>

    <string name="insert"> INSERT </string>
    <string name="showList"> SHOW LIST </string>
    <string name="update"> UPDATE </string>
    <string name="delete"> DELETE </string>
    <string name="cancel"> CANCEL</string>

    <string name="allPG13"> SHOW ALL PG13 MOVIES </string>

    <string-array name="spinnerItems">
        <item> G </item>
        <item> M18 </item>
        <item> NC16 </item>
        <item> PG </item>
        <item> PG13 </item>
        <item> R21 </item>
    </string-array>
</resources>